# searchaero

./: .gitignore  CLAUDE.md  README.md  cli.py  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt  scrape.py
core/: cookie_farm.py  db.py  models.py  notify.py  output.py  presentation.py  schema.py
docs/: commands.md  faq.md  getting-started.md  project-brief.md
docs/api-contract/: error-catalog.md  united-auth-flow.md  united-calendar-api.md
docs/findings/: aggressive-timing-experiment.md  curl-cffi-feasibility.md  hybrid-architecture.md  ultra-low-delay-experiment.md
routes/: canada_test.txt  canada_us_all.txt
scripts/: analyze_burn_in.py  burn_in.py  codespace_scrape.sh  orchestrate.py  parallel_burn_in.py  verify_data.py
scripts/experiments/: README.md  (+7 more)
specs/: aggressive-timing-experiment.md  backend-frontend-integration.md  burn-in-test.md  curl-cffi-playwright-cookie-farm.md  fix-scraper-backoff-and-session-budget.md  fix-scraper-resilience.md  fresh-profile-per-session.md  frontend-redesign-aviation-ledger.md  intelligent-orchestrator.md  minimal-data-path.md  parallel-orchestrator.md  parallel-scraper-workers.md  phase1-feature-expansion.md  reverse-engineer-united-calendar-api.md  shadcn-preset-theme-swap.md  test-curl-cffi-direct-http.md  ultra-low-delay-experiment.md  web-ui-award-search.md
tests/: test_api.py  test_cli.py  test_cli_full.py  test_cli_integration.py  test_db.py  test_e2e.py  test_hybrid_scraper.py  test_integration.py  test_mcp.py  test_models.py  test_output.py  test_parser.py  test_schema.py
web/: api.py
(+5557 files in other folders)
